payas-parser/src/parser/snapshots/payas_parser__parser__converter__tests__basic.snap
---
source: payas-parser/src/parser/converter.rs
expression: "convert_root(parsed.root_node(), src.as_bytes())"

---
types:
  - name: Foo
    kind:
      Composite:
        fields:
          - name: bar
            typ:
              Other:
                name: Baz
            type_modifier: NonNull
            relation:
              Other:
                optional: false
            column_name: custom_column
            auth:
              LogicalOp:
                Or:
                  - RelationalOp:
                      Eq:
                        - LogicalOp:
                            Not:
                              FieldSelection:
                                Select:
                                  - Single: self
                                  - role
                        - StringLiteral: role_admin
                  - RelationalOp:
                      Eq:
                        - FieldSelection:
                            Select:
                              - Single: self
                              - role
                        - StringLiteral: role_superuser
        table_name: ~

