payas-parser/src/parser/snapshots/payas_parser__parser__converter__tests__bb_schema.snap
---
source: payas-parser/src/parser/converter.rs
expression: "convert_root(parsed.root_node(), src.as_bytes(), &codemap, file_span)"

---
models:
  - name: Concert
    kind: Persistent
    fields:
      - name: id
        typ:
          Plain:
            - Int
        annotations:
          - name: pk
            params: {}
          - name: autoincrement
            params: {}
      - name: title
        typ:
          Plain:
            - String
        annotations: []
      - name: venue
        typ:
          Plain:
            - Venue
        annotations:
          - name: column
            params:
              value:
                StringLiteral:
                  - venueid
    annotations:
      - name: table
        params:
          value:
            StringLiteral:
              - concerts
  - name: Venue
    kind: Persistent
    fields:
      - name: id
        typ:
          Plain:
            - Int
        annotations:
          - name: pk
            params: {}
          - name: autoincrement
            params: {}
      - name: name
        typ:
          Plain:
            - String
        annotations: []
      - name: concerts
        typ:
          List:
            Plain:
              - Concert
        annotations:
          - name: column
            params:
              value:
                StringLiteral:
                  - venueid
    annotations:
      - name: table
        params:
          value:
            StringLiteral:
              - venues

