payas-parser/src/parser/snapshots/payas_parser__parser__converter__tests__context_schema.snap
---
source: payas-parser/src/parser/converter.rs
expression: "convert_root(parsed.root_node(), src.as_bytes(), &codemap, file_span)"

---
models:
  - name: AuthUser
    kind: Context
    fields:
      - name: id
        typ:
          Plain:
            - Int
        annotations:
          - name: jwt
            params:
              Single:
                StringLiteral:
                  - sub
      - name: roles
        typ:
          List:
            Plain:
              - String
        annotations:
          - name: jwt
            params: None
    annotations: []

