payas-parser/src/parser/snapshots/payas_parser__parser__converter__tests__expression_precedence.snap
---
source: payas-parser/src/parser/converter.rs
expression: "convert_root(parsed.root_node(), src.as_bytes(), file_span)"

---
models:
  - name: Foo
    kind: Persistent
    fields:
      - name: bar
        typ:
          Plain:
            - Baz
        annotations:
          - name: column
            params:
              - StringLiteral:
                  - custom_column
          - name: auth
            params:
              - LogicalOp:
                  Or:
                    - RelationalOp:
                        Eq:
                          - LogicalOp:
                              Not:
                                - FieldSelection:
                                    Select:
                                      - Single:
                                          - self
                                      - - role
                          - StringLiteral:
                              - role_admin
                    - RelationalOp:
                        Eq:
                          - FieldSelection:
                              Select:
                                - Single:
                                    - self
                                - - role
                          - StringLiteral:
                              - role_superuser
    annotations: []

